testsuite/tests/checks/multiple_entries/test.out
decls.ads:5:11: error: more than one entry in protected definition
5 |     entry Put (I: out Integer);
  |           ^^^ 

